# testCli

./: README.md  pyproject.toml  requirements.txt  setup.py  test_process.py
cots/pkg_test/: __init__.py  printme.py
remotecommand/: __init__.py
remotecommand.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
remotecommand/cli/: main.py  remotecommad.py
remotecommand/cli/tests/: main.py
