[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remotecommand"
version = "0.1.0"
description = "cli"
requires-python = ">=3.8"
readme = "README.md"
authors = [
    { name = "linda Martin"}
]


dependencies = [
    "colorama~=0.0"
]

[project.optional-dependencies]
dev = [
    "twine",
    "build"
]

[project.scripts]
remotecommandsend = "remotecommand.__main__:main"

[tool.setuptools]
packages = ["remotecommand", "pkg_test"]

[tool.setuptools.package-dir]
remotecommand = "remotecommand"
pkg_test = "cots/pkg_test"
